--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 
 *{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    box-sizing: border-box; 
+     padding: 0;
+    margin: 0; 
 }
 body{
     height: 3000px;
@@ -46,17 +46,9 @@ body{
 }
 /* ======================================================================*/
 .Scroll-icons{
-    position: fixed;
     z-index: 10;
-    width: 50%;
-    height: 50%;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    margin-left: auto;
-    transform: translate(65%,69%);
-    
+    transform: translate(80%,14%);
+    top: 176px;
 }
 
 .Scroll-icons li{
